# common

./: .gitignore  CMakeLists.txt  README.md  __init__.py  arma_eigen.cpp  arma_eigen.h  arma_numpy.py  arma_numpyPYTHON_wrap.c  armapy.pxi  common.i  common.py  commonPYTHON_wrap.cxx  consolecolors.h  fsolve.h  gas.i  gas.pxi  gas.pyx  interpolate.cpp  interpolate.h  logger.cpp  logger.h  logger.h.in  material.cpp  material.h  material_unittest.cpp  math_common.cpp  math_common.h  math_common_tracer.cpp  rottfuncs.cpp  rottfuncs.h  settracer.h  solid.i  solid.pxi  solid.pyx  tracer.h  vtypes.h
bessel/: Makefile  bessel.cpp  bessel.h  bessel_unittest.cpp
cmake_tools/: FindEigen3.cmake
exception/: exception.h
fsolve/: fsolve.cpp  fsolve.h
gas/: gas.cpp  gas.h  idealgas.cpp  idealgas.h
interpolate/: interpolate.cpp  interpolate.h
rottfuncs/: rottfuncs.cpp  rottfuncs.h
solid/: solid.cpp  solid.h
special/: bessel.cpp  bessel.h  cbessj.cpp  cbessj.h  skewsine.cpp  skewsine.h
src/: arma_eigen.h  arma_numpy.cpp  arma_numpy.h  consolecolors.h  exception.h  gas.cpp  gas.h  math_common.cpp  math_constants.h  num_derivative.h  pycallback.cpp  pycallback.h  pylock.cpp  pylock.h  rksystem.h  rottfuncs.h  settracer.h  solid.cpp  solid.h  staticmsg.h  tracer.h  vtypes.h
src/gas/: air.cpp  air.h  helium.cpp  helium.h  nitrogen.cpp  nitrogen.h  perfectgas.cpp  perfectgas.h
src/special/: sph_j.cpp  sph_j.h
src/swig/: arma_numpy.i  common.i  special.i
swig_files/: arma_numpy.cpp  arma_numpy.h  arma_numpy.i  my_exceptions.i
